--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -21,7 +21,7 @@
                             <div class="container-title-input">
                                 <p>Type / Model of Bike</p>
                                 
-                                <select id="selectModels" name="modelOfBike" onclick="showSelected('<%=edit.modelOfBike%>')"> 
+                                <select id="selectModels" name="modelOfBike"> 
                                     <%if(edit&&edit.modelOfBike==="cafe_racer"){%>                            
                                         <option id="cafe_racer" value="cafe_racer">Cafe Racer</option>
                                         <option id="choppers" value="choppers">Choppers</option>
