--- a/public/styles.css
+++ b/public/styles.css
@@ -9,7 +9,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     background-color: #1d1b1b;
-    color: white;
+    /* color: white; */
 }
 header{
     background-color:black;
@@ -77,6 +77,7 @@ nav a:hover{
 main{
     padding: 1rem;
     min-height: 100vh;
+    color: white;
 }
 main h2{
     font-size: 7vmin;
@@ -86,6 +87,7 @@ main h2{
 article{
     margin-top: 1rem;
 }
+
 .container-moto{
     margin:0 auto;
     display: flex;
@@ -103,6 +105,11 @@ article{
     width: 100%;
     justify-content: space-between;
 }
+.container-like{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .container-tittle-heart img{
     width: 2.5vw;
     align-self: center;
@@ -110,6 +117,7 @@ article{
 .container-text{
 display: flex;
 flex-direction: column;
+width: 100%;
 height: 100%;
 justify-content: space-between;
 }
