--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -7,9 +7,9 @@
                 <div class="box-form">
                     <h3>Sign Up</h3>
                     <form action="/signUp" method="POST">
-                        <input class="inputSign" type="text" name="name" placeholder="Name"/>
-                        <input  class="inputSign" type="text" name="email" placeholder="E-mail"/>
-                        <input  class="inputSign" type="password" name="password" placeholder="Password"/>
+                        <input class="inputSign" type="text" name="name" placeholder="Name" required/>
+                        <input  class="inputSign" type="text" name="email" placeholder="E-mail" required/>
+                        <input  class="inputSign" type="password" name="password" placeholder="Password" required/>
                          <input class="boton-submit" type="Submit" value="Send"/> 
                     </form>
                     <% if (error) { %>
