--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -8,7 +8,7 @@
                     <h3>Sign Up</h3>
                     <form action="/signUp" method="POST">
                         <input class="inputSign" type="text" name="name" placeholder="Name" required/>
-                        <input  class="inputSign" type="text" name="email" placeholder="E-mail" required/>
+                        <input  class="inputSign" type="email" name="email" placeholder="E-mail" required/>
                         <input  class="inputSign" type="password" name="password" placeholder="Password" required/>
                          <input class="boton-submit" type="Submit" value="Send"/> 
                     </form>
